--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -3,48 +3,49 @@
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
     <%= image_tag "logo.png" %>
-   <!--  <img src="images/logo.png" alt="logo"> -->
+    <!--  <img src="images/logo.png" alt="logo"> -->
   </a>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"></button>
-  </form>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit"></button>
+    </form>
 
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Ajouter votre piscine</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">S'inscrire</a>
+    <%=  link_to "Liste des piscines", pools_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%=  link_to "Ajouter votre piscine", new_pool_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%=  link_to "S'inscrire", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
      <!-- if user_signed_in?
-     <!-- Links when logged in -->
-   <!--   link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" -->
-     <!-- link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" -->
-     <!-- link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" -->
+       <!-- Links when logged in -->
+       <!--   link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" -->
+       <!-- link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" -->
+       <!-- link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" -->
 
-    <!-- Profile picture with dropdown list -->
-    <div class="navbar-wagon-item">
+       <!-- Profile picture with dropdown list -->
+       <div class="navbar-wagon-item">
+        <div class="dropdown">
+          <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Log Out</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Dropdown appearing on mobile only -->
+    <div class="navbar-wagon-item hidden-md hidden-lg">
       <div class="dropdown">
-        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+        <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><a href="#">Host</a></li>
+          <li><a href="#">Trips</a></li>
+          <li><a href="#">Messagese</a></li>
         </ul>
       </div>
     </div>
   </div>
-
-  <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
