--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -1,1 +1,7 @@
 <h1>Pages#Show</h1>
+
+
+
+<%= link_to "Add Pool", new_cocktail_dose_path(params[:id]) %> <br />
+
+<%= link_to "Back to cocktail", cocktails_path %>
