--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -1,10 +1,8 @@
-
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
-    <%= image_tag "logo.png" %>
-    <!--  <img src="images/logo.png" alt="logo"> -->
-  </a>
+  <%= link_to root_path, class: "navbar-wagon-brand" do %>
+    <%= image_tag "logo.png", height: 50 %>
+  <% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
@@ -14,38 +12,53 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit"></button>
     </form>
 
+    <% if user_signed_in? %>
+
+      <!-- Links when logged in -->
+       <%=  link_to "Ajouter votre piscine", new_pool_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
     <%=  link_to "Liste des piscines", pools_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%=  link_to "Ajouter votre piscine", new_pool_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%=  link_to "S'inscrire", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
-     <!-- if user_signed_in?
-       <!-- Links when logged in -->
-       <!--   link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" -->
-       <!-- link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" -->
-       <!-- link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" -->
-
-       <!-- Profile picture with dropdown list -->
+       <!-- Avatar with dropdown menu -->
        <div class="navbar-wagon-item">
         <div class="dropdown">
-          <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+          <%= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li>
+              <%= link_to "#" do %>
+              <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "#" do %>
+              <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+              <% end %>
+            </li>
           </ul>
         </div>
       </div>
+      <% else %>
+      <!-- Login link (when logged out) -->
+      <%=  link_to "Liste des piscines", pools_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <% end %>
     </div>
 
-    <!-- Dropdown appearing on mobile only -->
+    <!-- Dropdown list appearing on mobile only -->
     <div class="navbar-wagon-item hidden-md hidden-lg">
       <div class="dropdown">
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Host</a></li>
-          <li><a href="#">Trips</a></li>
-          <li><a href="#">Messagese</a></li>
+          <li><a href="#">Some mobile link</a></li>
+          <li><a href="#">Other one</a></li>
+          <li><a href="#">Other one</a></li>
         </ul>
       </div>
     </div>
   </div>
+
