--- a/app/views/pools/edit.html.erb
+++ b/app/views/pools/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>New Pool</h1>
+<h1>Editing Pool</h1>
 
 <%= render 'form', pool: @pool %>
 
+<%= link_to 'Show', @pool %> |
 <%= link_to 'Back', pools_path %>
