--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -1,14 +1,27 @@
 <h1>Pages#Index</h1>
 
-<div class="row">
-  <% @pools.each do |pool|%>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>User</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-  <div class="col-sm-4">
+  <tbody>
+    <% @pools.each do |pool| %>
+      <tr>
+        <td><%= pool.title %></td>
+        <td><%= pool.user %></td>
+        <td><%= link_to 'Show', pool %></td>
+        <td><%= link_to 'Edit', edit_pool_path(pool) %></td>
+        <td><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-    <div class="card">
-      <%= link_to pool.address, pool_path(pool) %>
-    </div>
-  </div>
+<br>
 
-  <% end %>
-</div>
+<%= link_to 'New Pool', new_pool_path %>
