work on cover but doestn work

--- a/app/assets/stylesheets/components/_cover-video.scss
+++ b/app/assets/stylesheets/components/_cover-video.scss
@@ -20,16 +20,16 @@
     overflow: hidden;
     background: #000;
 }
-.text {
-  position: fixed;
-  top: calc(70px + 40vh);
-  z-index: 1000;
-  text-align: center;
-  h1 {
-    color: white !important;
-    width: 100vh;
-  }
-}
+// .text {
+//   position: fixed;
+//   top: calc(70px + 40vh);
+//   z-index: 1000;
+//   text-align: center;
+//   h1 {
+//     color: white !important;
+//     width: 100vh;
+//   }
+// }
 
 
 .video-container .poster img {
