--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,29 +1,24 @@
-// .form {
+// .form-design{
 //     display: block;
-//     margin-top: 300px;
-//     margin-left: 450px;
-//     margin-right: 450px;
-
+//     width: 530px;
+//     line-height: 26px;
+//     font-size: 14px;
+//     box-shadow: none;
+//     color: #848484;
+//     text-transform: capitalize;
+//     background:#f7f7f7;
+//     padding: 24px 19px;
+//     border-radius: 0;
 // }
 
-// .justify-content-center {
-//   -webkit-box-pack: center!important;
-// }
-
-
-.form {
-    display: block;
-    margin-top: 70px;
-    margin-left: 450px;
-    margin-right: 450px;
-    width: 530px;
-    line-height: 26px;
-    font-size: 14px;
-    box-shadow: none;
-    color: #848484;
-    text-transform: capitalize;
-    background:#f7f7f7;
-    padding: 24px 19px;
-    border-radius: 0;
+.my-input {
+  color: #999999;
+  border-color: #999999;
+  border-radius: 50px;
 }
+.my-label {
+   color: #999999;
+  border-color: #999999;
+  border-radius: 50px;
 
+}
