--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,12 +1,13 @@
-.btn-medium {
+.btn {
   color: #999999;
   border: 1px solid #999999;
   padding: 15px 25px;
   border-radius: 50px;
-  font-weight: lighter;
-  opacity: 0.6;
-  align: center;
-  margin-left: 200px;
+  margin-bottom: 20px;
+
+
+
+  // margin-left: 200px;
 }
 // .btn-medium:hover {
 //   opacity: 1;
