--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,32 +1,30 @@
 <div class="footer">
-
   <div class="container-fluid">
     <div class="row full-width">
       <div class="col-md-4 text-center">
         <div class="footer-copyright" >
           <a href="/" class="footer-wagon-brand ">
-           <%= image_tag "logo.png"%>
-         </a>
-         <p> Le premier site de location</p><p> de piscines privées en France <i class="fa fa-sun-o"></i></p>
-       </div>
-     </div>
-     <div class="col-md-4 text-center">
-       <div class="footer-organisation">
-        <ul>
-          <li><a href="" class="navbar-wagon-item navbar-wagon-link">Ajouter votre piscine</a></li>
-          <li><a href="" class="navbar-wagon-item navbar-wagon-link">A propos</a></li>
-          <li><a href="" class="navbar-wagon-item navbar-wagon-link">Règles de sécurités</a></li>
-          <li><a href="" class="navbar-wagon-item navbar-wagon-link">Contact</a></li>
-        </ul>
+            <%= image_tag 'logo.png' %>
+          </a>
+          <p> Le premier site de location</p><p> de piscines privées en France <i class="fa fa-sun-o"></i></p>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="footer-organisation">
+          <ul>
+            <li><a href="" class="navbar-wagon-item navbar-wagon-link">Ajouter votre piscine</a></li>
+            <li><a href="" class="navbar-wagon-item navbar-wagon-link">A propos</a></li>
+            <li><a href="" class="navbar-wagon-item navbar-wagon-link">Règles de sécurités</a></li>
+            <li><a href="" class="navbar-wagon-item navbar-wagon-link">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-4 text-center ">
+        <div class="footer-links">
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-facebook"></i></a>
+        </div>
       </div>
     </div>
-    <div class="col-md-4 text-center ">
-      <div class="footer-links">
-        <a href="#"><i class="fa fa-instagram"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
-      </div>
-    </div>
-
   </div>
-</div>
 </div>
