--- a/app/views/pools/new.html.erb
+++ b/app/views/pools/new.html.erb
@@ -1,5 +1,13 @@
 <h1>New Pool</h1>
+<div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+        <%= render 'form', pool: @pool %>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+        <%= link_to 'Back', pools_path, class: "btn-medium btn" %>
+      </div>
+    </div>
+  </div>
 
-<%= render 'form', pool: @pool %>
 
-<%= link_to 'Back', pools_path %>
