--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,1 +1,15 @@
 <h1>Pages#index de booking</h1>
+
+<div class="container">
+  <div
+  <% @bookings.each do |booking| %>
+    <div class="product">
+        <div class='product-body'>
+          <h3><%= link_to booking.pool_id, flat_path(booking.pool_id) %></h3>
+          <p><%= @pool.title %></p>
+          <p><%= booking.date %></p>
+          <p>Booking status : <%= booking.status%> at <%= booking.user.last_name %></p>
+        </div>
+      </div>
+  <% end %>
+</div>
