--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,31 @@
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: false %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :First_Name, required: true, autofocus: false %>
-    <%= f.input :Last_Name, required: true, autofocus: false %>
-    <%= f.input :Address, required: true, autofocus: false %>
-    <%= f.input :Phone_Number, required: true, autofocus: false %>
-    <%= f.input :Avatar, required: false, autofocus: false %>
-
-
+<%= f.error_notification %>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: false, input_html: { class: 'my-input' }, label_html: { class: 'my-label' } %>
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { class: 'my-input' }, label_html: { class: 'my-label' }  %>
+        <%= f.input :password_confirmation, required: false, input_html: { class: 'my-input' }, label_html: { class: 'my-label' }  %>
+        <%= f.input :First_Name, required: true, autofocus: false , input_html: { class: 'my-input' }, label_html: { class: 'my-label' } %>
+        <%= f.input :Last_Name, required: true, autofocus: false, input_html: { class: 'my-input' }, label_html: { class: 'my-label' }  %>
+        <%= f.input :Address, required: true, autofocus: false , input_html: { class: 'my-input' }, label_html: { class: 'my-label' } %>
+        <%= f.input :Phone_Number, required: true, autofocus: false,input_html: { class: 'my-input' }, label_html: { class: 'my-label' }  %>
+        <%= f.input :Avatar, required: false, autofocus: false, input_html: { class: 'my-input' }, label_html: { class: 'my-label' }  %>
+      </div>
+        <div class="form-actions btn-medium">
+          <%= f.button :submit, "Sign up" %>
+        </div>
+         <% end %>
+<!--       <div class="btn-hover">
+        <%#= render "devise/shared/links" %>
+      </div> -->
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
+<!--
+ <%#= render "devise/shared/links" %>
+-->
