--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,11 +7,11 @@
     <%= f.input :email, required: true, autofocus: false %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: false %>
-    <%= f.input :First_Name, required: true, autofocus: false %>
-    <%= f.input :Last_Name, required: true, autofocus: false %>
-    <%= f.input :Address, required: true, autofocus: false %>
-    <%= f.input :Phone_Number, required: true, autofocus: false %>
-    <%= f.input :Avatar, required: false, autofocus: false %>
+    <%= f.input :first_name, required: true, autofocus: false %>
+    <%= f.input :last_name, required: true, autofocus: false %>
+    <%= f.input :address, required: true, autofocus: false %>
+    <%= f.input :phone_number, required: true, autofocus: false %>
+
 
 
   </div>
