--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -16,9 +16,9 @@
 
 <p>
   <strong>User:</strong>
-  <%= @pool.user.First_Name%> <%=@pool.user.Last_Name%>
+  <%= @pool.user.first_name%> <%=@pool.user.last_name%>
   <%= @pool.user.email %>
-  <%= @pool.user.Phone_Number %>
+  <%= @pool.user.phone_number %>
 </p>
 
 <%= link_to 'Edit', edit_pool_path(@pool) %> |
