--- a/app/views/pages/_cover-video.html.erb
+++ b/app/views/pages/_cover-video.html.erb
@@ -8,6 +8,7 @@
       <div class="banner-content">
         <h1>Réservez une piscine près de chez vous</h1>
         <p>Plus calme, plus chaleureux, plus convivial.</p>
+        <%=  link_to "Liste des piscines", pools_path, class: "btn btn-info" %>
       </div>
     </div>
   </div>
