--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -33,6 +33,12 @@
   <% end %>
   <% end %>
 </div>
+<div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+></div>
 
 
 
