I added the search bar in index

--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -1,27 +1,40 @@
-<h1>Pages#Index</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pools.each do |pool| %>
-      <tr>
-        <td><%= pool.title %></td>
-        <td><%= pool.address %></td>
-        <td><%= link_to 'Show', pool %></td>
-        <td><%= link_to 'Edit', edit_pool_path(pool) %></td>
-        <td><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1>Les piscines</h1>
+<div class="container">
+  <div class="wrapper">
+    <div class="center-form">
+    <%= form_tag pools_path, method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Find a pool"
+      %>
     <% end %>
-  </tbody>
-</table>
+    </div>
+  </div>
 
-<br>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>User</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
 
-<%= link_to 'New Pool', new_pool_path %>
+    <tbody>
+      <% @pools.each do |pool| %>
+        <tr>
+          <td><%= pool.title %></td>
+          <td><%= pool.address %></td>
+          <td><%= link_to 'Show', pool %></td>
+          <td><%= link_to 'Edit', edit_pool_path(pool) %></td>
+          <td><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+
+  <%= link_to 'New Pool', new_pool_path %>
+</div>
