--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
     <%= render "/pages/footer" %>
-     <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js" %>
+
+  <%= javascript_include_tag "application" %>
+<%= javascript_include_tag "https://maps.googleapis.com/maps/api/js" %>
+<%= javascript_pack_tag "map" %>
   </body>
 
 </html>
