--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -23,5 +23,11 @@
 </table>
 
 <br>
+<div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+></div>
 
 <%= link_to 'New Pool', new_pool_path %>
