Update Profil fait

--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -30,8 +30,8 @@
             <% end %>
           </li>
           <li>
-            <%= link_to "#" do %>
-            <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+            <%= link_to edit_user_registration_path, method: :get do %>
+            <i class="fa fa-cog"></i>  <%= t(".settings", default: "Edit User") %>
             <% end %>
           </li>
           <li>
@@ -49,8 +49,8 @@
             <% end %>
           </li>
           <li>
-            <%= link_to "#" do %>
-            <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+            <%= link_to edit_user_registration_path, method: :get do %>
+            <i class="fa fa-cog"></i>  <%= t(".settings", default: "Edit User") %>
             <% end %>
           </li>
           <li>
