--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,4 @@
-.btn {
+.my-stylish-button {
   color: #999999;
   border: 1px solid #999999;
   padding: 15px 25px;
@@ -10,3 +10,11 @@
 //   text-decoration: none;
 //   color: #999999;
 // }
+
+.btn.btn-medium a {
+  color: #999999;
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+}
