--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,20 +3,15 @@
   line-height: 1.43;
   color: #484848;
   background-color: #fff;
-  display: block;
-  // box-sizing: border-box;
-  border-radius: 30px;
-  margin-left: 10px;
-  margin-top: 20px;
-  offset: 10px 300px;
-  background-size: 50%;
-
+  margin: 3vh;
+  padding: 1vh;
+  border-radius: 2rem;
+  height: 450px;
 }
-h1 {
-  text-align:center;
-}
-
-.main-container{
-  display: flex;
-  padding: 20px;
+.btn {
+  color: #999999;
+  border: 1px solid #999999;
+  padding: 15px 25px;
+  border-radius: 50px;
+  margin-bottom: 20px;
 }
