--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -1,92 +1,67 @@
-
-
-<h1> <%= @pool.title %> détails : </h1>
-
-<%= @pool.address %>
-<%= @pool.dimensions %>
-<%= @pool.description %>
-<p> <%= @pool.price %>€ </p>
-
-
-
-<p>
-  <strong>Name:</strong>
-  <%= @pool.title %>
-</p>
-
-<p>
-  <strong>User:</strong>
-
-  <%= @pool.user.first_name%> <%=@pool.user.last_name%>
-  <%= @pool.user.email %>
-  <%= @pool.user.phone_number %>
-</p>
-
-
-<!-- integration du booking dans la view show de pool -->
-<div >
-  <% if @pool.user != current_user %>
-  <h1> Réserver la piscine : </h1>
-  <%= simple_form_for [@pool, @booking] do |f| %>
-  <%= f.input :date %>
-  <%= f.submit class: "btn btn-medium" %>
-  <% end %>
-  <% end %>
-</div>
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-></div>
-
-
-
-<%= link_to 'Edit', edit_pool_path(@pool) %> |
-
-<%= link_to 'Back', pools_path %>
-
-<div class="main-container">
-  <div class="card-container">
-    <div class="col-xs-6 col-md-6">
-      <h1>Description Piscine :  </h1>
-          <%= @pool.address %>
-          <%= @pool.dimensions %>
-          <%= @pool.description %>
-          <p> <%= @pool.price %>€ </p>
+<div class="container">
+<%= cl_image_tag @pool.photo, height: 300, width: 400, crop: :fill %>
+  <div class="row">
+    <div class="col-xs-6 col-md-6 test">
+      <div class="card-container">
+        <h1>Description Piscine:</h1>
+          <p>
+            <strong>Address:</strong>
+              <%= @pool.address %>
+          </p>
+          <p>
+            <strong>Dimensions:</strong>
+              <%= @pool.dimensions %>
+          </p>
+          <p>
+            <strong>Description:</strong>
+              <%= @pool.description %>
+          </p>
+          <p>
+            <strong>Price:</strong>
+              <%= @pool.price %>€
+          </p>
           <p>
             <strong>Name:</strong>
-            <%= @pool.title %>
+              <%= @pool.title %>
           </p>
           <p>
-            <strong>User:</strong>
-            <%= @pool.user.first_name%> <%=@pool.user.last_name%>
-            <%= @pool.user.email %>
-            <%= @pool.user.phone_number %>
+            <strong>Owner:</strong>
+              <%= @pool.user.first_name%> <%=@pool.user.last_name%>
           </p>
-      <!-- </div> -->
-    </div>
-  </div>
-    <!-- integration du booking dans la view show de pool -->
-    <!--  <div class="row"> -->
-      <div class=" card-container">
-        <div class="col-xs-6 col-md-6">
-<!--           <div > -->
-            <% if @pool.user != current_user %>
-            <h1> Réserver la piscine : </h1>
-            <%= simple_form_for [@pool, @booking] do |f| %>
-            <%= f.input :date %>
-            <%= f.submit class: "btn btn-medium" %>
-            <% end %>
-            <% end %>
-         <!--  </div> -->
-        </div>
+          <p>
+            <strong> Mail: </strong>
+              <%= @pool.user.email %>
+          </p>
+          <p>
+            <strong> Phone Number:</strong>
+              <%= @pool.user.phone_number %>
+          </p>
       </div>
     </div>
-
-
-
-    <%= link_to 'Edit', edit_pool_path(@pool) %> |
-
-    <%= link_to 'Back', pools_path %>
-
+    <div class="col-xs-6 col-md-6 test">
+      <div class="card-container">
+        <% if @pool.user != current_user %>
+          <h1> Réserver la piscine : </h1>
+          <%= simple_form_for [@pool, @booking] do |f| %>
+            <%= f.input :date %>
+            <%= f.submit class: "btn btn-medium" %>
+          <% end %>
+        <% end %>
+          <div class="btn btn-medium">
+              <%= link_to 'Edit', edit_pool_path(@pool) %>
+          </div>
+          <div class="btn btn-medium">
+              <%= link_to 'Back', pools_path %>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div
+    id="map"
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    ></div>
+  </div>
+</div>
