--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -34,10 +34,10 @@
   <% end %>
 </div>
 <div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
+id="map"
+style="width: 100%;
+height: 600px;"
+data-markers="<%= @markers.to_json %>"
 ></div>
 
 
@@ -50,43 +50,45 @@
   <div class="card-container">
     <div class="col-xs-6 col-md-6">
       <h1>Description Piscine :  </h1>
-          <%= @pool.address %>
-          <%= @pool.dimensions %>
-          <%= @pool.description %>
-          <p> <%= @pool.price %>€ </p>
-          <p>
-            <strong>Name:</strong>
-            <%= @pool.title %>
-          </p>
-          <p>
-            <strong>User:</strong>
-            <%= @pool.user.first_name%> <%=@pool.user.last_name%>
-            <%= @pool.user.email %>
-            <%= @pool.user.phone_number %>
-          </p>
+      <%= @pool.address %>
+      <%= @pool.dimensions %>
+      <%= @pool.description %>
+      <p> <%= @pool.price %>€ </p>
+      <p>
+        <strong>Name:</strong>
+        <%= @pool.title %>
+      </p>
+      <p>
+        <strong>User:</strong>
+        <%= @pool.user.first_name%> <%=@pool.user.last_name%>
+        <%= @pool.user.email %>
+        <%= @pool.user.phone_number %>
+      </p>
       <!-- </div> -->
     </div>
   </div>
-    <!-- integration du booking dans la view show de pool -->
-    <!--  <div class="row"> -->
-      <div class=" card-container">
-        <div class="col-xs-6 col-md-6">
-<!--           <div > -->
-            <% if @pool.user != current_user %>
-            <h1> Réserver la piscine : </h1>
-            <%= simple_form_for [@pool, @booking] do |f| %>
-            <%= f.input :date %>
-            <%= f.submit class: "btn btn-medium" %>
-            <% end %>
-            <% end %>
-         <!--  </div> -->
+  <!-- integration du booking dans la view show de pool -->
+  <!--  <div class="row"> -->
+    <div class=" card-container">
+      <div class="col-xs-6 col-md-6">
+        <!--           <div > -->
+          <% if @pool.user != current_user %>
+          <h1> Réserver la piscine : </h1>
+          <%= simple_form_for [@pool, @booking] do |f| %>
+          <%= f.input :date %>
+          <%= f.submit class: "btn btn-medium" %>
+          <% end %>
+          <% end %>
+          <!--  </div> -->
         </div>
       </div>
     </div>
 
-
-
+    <% if policy(@pool).edit? %>
     <%= link_to 'Edit', edit_pool_path(@pool) %> |
+    <% end %>
+
+
 
     <%= link_to 'Back', pools_path %>
 
