--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -1,5 +1,41 @@
 <div class="container">
-<%= cl_image_tag @pool.photo, height: 300, width: 400, crop: :fill %>
+  <div class="row">
+    <div class="col-xs-12">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <%= cl_image_tag "https://kitt.lewagon.com/placeholder/cities/berlin"%>
+          </div>
+
+          <!-- <div class="item">
+            <%= cl_image_tag @pool.photo, height: 300, width: 100, crop: :fill %>
+          </div>
+
+          <div class="item">
+            <%= cl_image_tag @pool.photo, height: 300, width: 100, crop: :fill %>
+          </div> -->
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-xs-6 col-md-6 test">
       <div class="card-container">
