--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -10,8 +10,8 @@
         placeholder: "Find a pool"
         %>
         <% end %>
-      </div>
     </div>
+  </div>
     <!--  Search bar -->
 
     <div class="container">
@@ -27,14 +27,11 @@
                   <div class="row">
                     <div class="col-xs-12">
                       <div class="card"
-
-                      <% if pool.photo? %>
-                      style="background-image: ('<%= image_tag pool.photo.url %>);"
+                      <% if pool.photo_url %>
+                      style="background-image: url('<%= cl_image_path pool.photo %>');"
                       <% else %>
                       style="background-image: url('<%= image_path "Orange-Ripple.jpg" %>');"
-                      <% end %>
-
-                      >
+                      <% end %>>
                     </div>
                   </div>
                 </div>
