--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -25,8 +25,8 @@
         <%= cl_image_tag current_user.photo, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li class="fa">
-            Signed in as :
-            <%= current_user.email %>
+            <i>Signed in as :
+            <%= current_user.email %></i>
           </li>
 
           <li>
@@ -67,9 +67,11 @@
         <% end %>
       </div>
     </div>
+
     <% else %>
     <!-- Login link (when logged out) -->
-    <%=  link_to "Liste des piscines", pools_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+    <%=  link_to "New User Session", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
