I deleted the button at the botom and change the confilt in the css

--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -21,7 +21,7 @@
             <div class= "row">
               <% @pools.each do |pool| %>
               <div class="col-xs-12 col-sm-6">
-                <div class="card-container">
+                <div class="card-container-index">
 
 
                   <div class="row">
@@ -91,7 +91,3 @@
 ></div>
 
 <br> -->
-
-
-<%= link_to 'New Pool', new_pool_path %>
-</div>
