--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,12 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Domine:400,700|Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+$body-font: "Domine", "Helvetica", "sans-serif";
+$headers-font: "Domine", "Helvetica", "sans-serif";
+
+// $body-font: 'Domine', serif;
+// $headers-font: 'Domine', serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
