--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,9 +1,17 @@
 // Define variables for your color scheme
+$blue: #b1ede8;
+$pink: #df928e;
+$light-pink: #c58882;
+$black: #32B796;
+$yellow:#FDB631;
+
+
+
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+// $blue: #469AE0;
+// $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
