--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .my-stylish-button {
-  color: #999999;
-  border: 1px solid #999999;
+  color: $light-pink;
+  border: 1px solid $light-pink;
   padding: 15px 25px;
   border-radius: 50px;
   margin-bottom: 20px;
@@ -12,7 +12,7 @@
 // }
 
 .btn.btn-medium a {
-  color: #999999;
+  color: $light-pink;
   &:hover {
     color: black;
     text-decoration: none;
