--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -53,7 +53,7 @@
   }
   h2 {
   font-size: 20px;
-  color: #3498db;
+  color: $light-pink;
   }
 
   p {
@@ -71,16 +71,18 @@
 .card-price {
   h2{
     font-size: 20px;
-    color: #3498db;
+    color: $blue;
   }
   p {
     font-size: 10px;
     opacity: 0.7;
     font-weight: lighter;
      line-height: 2vh;
+     color: $blue;
   }
   a:hover {
     opacity: 0.4;
     text-decoration: none;
+    color: $blue;
   }
 }
