--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,9 @@
 /* Main navbar */
 .navbar-wagon {
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: $blue;
   transition: all 0.3s ease;
-  height: 70px;
+  height: 10.2em;
   padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -19,13 +19,13 @@
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 50px;
+  height: 100px;
 }
 
 /* User Avatar */
 .navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
+  height: 6.2em;
+  width: 6.2em;
   border-radius: 50%;
 }
 
@@ -44,8 +44,8 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
+  color: $light-pink;
+  font-size: 17px;
 }
 .navbar-wagon-link:hover {
   color: #da552f;
