--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -1,4 +1,9 @@
-<div class="navbar-wagon transparent-navbar">
+<% if @transparent %>
+  <%classe = "transparent-navbar"%>
+<% else %>
+  <%classe = ""%>
+<% end %>
+<div class="navbar-wagon <%=classe%>">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
   <%= image_tag "logo.png", height: 50 %>
