--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Domine:400,700|Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Domine:400,700|Open+Sans:400,300,700|Raleway:400,100,300,700,500|Playfair+Display:400,400i,700,700i,900,900i");
 
 // Define fonts for body and headers
-$body-font: "Domine", "Helvetica", "sans-serif";
-$headers-font: "Domine", "Helvetica", "sans-serif";
+$body-font: "Raleway", "Helvetica", "sans-serif";
+$headers-font: "Playfair Display", "Helvetica", "sans-serif";
 
 // $body-font: 'Domine', serif;
 // $headers-font: 'Domine', serif;
