modifications home page

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -12,13 +12,13 @@
 // }
 
 .my-input {
-  color: #999999;
-  border-color: #999999;
+  color: $light-pink;
+  border-color: $light-pink;
   border-radius: 50px;
 }
 .label {
   color: $light-pink;
-  border-color: #999999;
+  border-color: $light-pink;
   border-radius: 50px;
 }
 .container {
