--- a/app/assets/stylesheets/components/_cover-video.scss
+++ b/app/assets/stylesheets/components/_cover-video.scss
@@ -79,6 +79,14 @@
     border-left: none;
     top: 0px;
     width: 100%;
-    margin-top: -70px;
+    margin-top: -10.2em;
+    height:105vh;
     object-fit: cover;
+}
+.big-h1{
+  color:#c58882;
+  font-size: 42px;
+}
+.scd-h1 {
+  font-size: 20px;
 }
