--- a/app/views/pages/_cover-video.html.erb
+++ b/app/views/pages/_cover-video.html.erb
@@ -6,9 +6,9 @@
   <div class="banner-absolute-container">
     <div class="banner">
       <div class="banner-content">
-        <h1>Réservez une piscine près de chez vous</h1>
-        <p>Plus calme, plus chaleureux, plus convivial.</p>
-        <%=  link_to "Liste des piscines", pools_path, class: "btn btn-info" %>
+        <h1 class="big-h1"><strong>Réservez une piscine près de chez vous</strong></h1>
+        <p class="scd-h1">Plus calme, plus chaleureux, plus convivial.</p>
+         <%=  link_to "Liste des piscines", pools_path, class: "btn btn-medium" %>
       </div>
     </div>
   </div>
