--- a/app/views/pools/new.html.erb
+++ b/app/views/pools/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Pool</h1>
+<h1>Ajoutez votre piscine</h1>
 <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
