repare some css stuffs

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -36,11 +36,11 @@
   border-color: #999999;
 }
 
-.my-input {
-  color: $light-pink;
-  border-color: $light-pink;
-  border-radius: 50px;
-}
+// .my-input {
+//   color: $light-pink;
+//   border-color: $light-pink;
+//   border-radius: 50px;
+// }
 
 .label {
   color: $light-pink;
